--- a/friday/chrome/content/test.css
+++ b/friday/chrome/content/test.css
@@ -9,6 +9,15 @@ body{
 	font-family:"Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, Arial, sans-serif;
 }
 
+a, a:visited {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .error {
     color:#FF0000;
 }
