fixed new window bug in google preview

--- a/ubiquity/chrome/content/browser.css
+++ b/ubiquity/chrome/content/browser.css
@@ -32,6 +32,7 @@
   color: #0066cc;
   text-decoration: underline;
   font-size: small;
+  cursor: pointer;
 }
 .gresult-url {
   font-size: x-small;
