--- a/ubiquity/chrome/content/preview.css
+++ b/ubiquity/chrome/content/preview.css
@@ -16,6 +16,7 @@ body {
   color: #0066cc;
   text-decoration: underline;
   font-size: small;
+  cursor: pointer;
 }
 .gresult-url {
   font-size: x-small;
