cmd input is now timed

--- a/ubiquity/chrome/content/templates/map.html
+++ b/ubiquity/chrome/content/templates/map.html
@@ -312,7 +312,7 @@
     }
     
     function insertMap( ) {
-      insertHtml( jQuery("#preview-pane-large").html() );
+      insertHtml( jQuery("#map").html() );
     }
       
       
