--- a/ubiquity/chrome/content/templates/searchresults.html
+++ b/ubiquity/chrome/content/templates/searchresults.html
@@ -1,7 +1,7 @@
 {for result in results}
 <div class="gresult">
   <div>
-    <a onclick="window.content.location.href = '${result.url}';">${result.title}</a>
+    <a href="${result.url}">${result.title}</a>
   </div>
   <xul:description class="gresult-content">${result.content}</xul:description>
   <div class="gresult-url">${result.visibleUrl}</div>
