--- a/ubiquity/chrome/content/templates/map.html
+++ b/ubiquity/chrome/content/templates/map.html
@@ -11,6 +11,7 @@
     <script src="http://www.google.com/uds/solutions/localsearch/gmlocalsearch.js" type="text/javascript"></script>    
     <script src="../jquery-1.2.3.min.js"></script>
     <script src="../browser.js"></script>
+    <script src="../utils.js"></script>
     <script src="../cmdutils.js"></script>
     <style>
 
