--- a/ubiquity/chrome/content/templates/map.html
+++ b/ubiquity/chrome/content/templates/map.html
@@ -10,6 +10,7 @@
     <script src="http://www.google.com/uds/api?file=uds.js&amp;v=1.0" type="text/javascript"></script>
     <script src="http://www.google.com/uds/solutions/localsearch/gmlocalsearch.js" type="text/javascript"></script>    
     <script src="../jquery-1.2.3.min.js"></script>
+    <script src="../builtinfactories.js"></script>
     <script src="../browser.js"></script>
     <script src="../utils.js"></script>
     <script src="../cmdutils.js"></script>
